# coyote_racer

./: README.md
client/: CMakeLists.txt
client/src/: coyote_racer_client.cpp
common/src/: comm_socket.cpp  comm_socket.h
server/: CMakeLists.txt
server/src/: coyote_racer_server.cpp  find_marker.cpp  find_marker.h  follow_path.cpp  follow_path.h  motor_ctrl.cpp  motor_ctrl.h  track_marker.cpp  track_marker.h  undistort_points.cpp  undistort_points.h
server/test_find_marker/: CMakeLists.txt
server/test_find_marker/src/: test_find_marker.cpp
server/work/: calib_intrinsics_960x576_120.yml
